hw21, google/github oauth

--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,8 @@ fields = "*"
 django-crispy-forms = "*"
 pillow = "*"
 django-inlinecss = "*"
+social-auth-app-django = "*"
+python-social-auth = "*"
 
 [dev-packages]
 
