--- a/Pipfile
+++ b/Pipfile
@@ -15,7 +15,9 @@ pillow = "*"
 django-inlinecss = "*"
 social-auth-app-django = "*"
 python-social-auth = "*"
-django-admin-black = "*"
+six = "*"
+django-baton = "*"
+django-grappelli = "*"
 
 [dev-packages]
 
