customized 404/500 error pages

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,14 @@
 .idea/django_lms.iml
 .idea/workspace.xml
 .idea/misc.xml
+.idea/
+
 *.pyc
 .*
-venv
-db.sqlite3
-.idea/
-migrations/
+
 .env
+venv
+
+db.sqlite3
+migrations/
+*/migrations/
